# src/routes/api.js
@@ -4,6 +4,8 @@ const express = require('express');
 
 const uploadsController = require('../controllers/uploads');
 const helpers = require('./helpers');
+// const postsAPI = require('../api/posts');
+const posts = require('../posts');
 
 module.exports = function (app, middleware, controllers) {
 	const middlewares = [middleware.autoLocale, middleware.authenticateRequest];
@@ -42,4 +44,43 @@ module.exports = function (app, middleware, controllers) {
 		middleware.canViewUsers,
 		middleware.checkAccountPermissions,
 	], helpers.tryRoute(controllers.accounts.edit.uploadPicture));
+
+	// src/routes/api.js
+	// ...
+	// Mark a reply as answered
+	router.post(
+		'/posts/:pid/answered',
+		[...middlewares, middleware.ensureLoggedIn, middleware.applyCSRF],
+		async (req, res, next) => {
+			try {
+				console.log('[answered] POST hit pid=%s uid=%s', req.params.pid, req.uid);
+				// If you implemented Posts.setAnswered, you can use it instead:
+				// const out = await posts.setAnswered(req.params.pid, true, req.uid);
+				await posts.answered.mark(req.params.pid, req.uid);
+				console.log('[answered] POST resolved pid=%s', req.params.pid);
+				res.json({ ok: true, pid: Number(req.params.pid), answered: true });
+			} catch (err) {
+				console.error('[answered] POST error', err);
+				next(err);
+			}
+		}
+	);
+
+	// Unmark
+	router.delete(
+		'/posts/:pid/answered',
+		[...middlewares, middleware.ensureLoggedIn, middleware.applyCSRF],
+		async (req, res, next) => {
+			try {
+				console.log('[answered] DELETE hit pid=%s uid=%s', req.params.pid, req.uid);
+				// const out = await posts.setAnswered(req.params.pid, false, req.uid);
+				await posts.answered.unmark(req.params.pid, req.uid);
+				console.log('[answered] DELETE resolved pid=%s', req.params.pid);
+				res.json({ ok: true, pid: Number(req.params.pid), answered: false });
+			} catch (err) {
+				console.error('[answered] DELETE error', err);
+				next(err);
+			}
+		}
+	);
 };
